[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
gloo-console = "0.2.3"
gloo-utils = "0.1.6"
gloo-net = "0.2"
web-sys = { version = "0.3.60", features = ["Window", "Document", "Location"] }
serde = { version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"
wasm-bindgen-futures = "0.4"
comrak = "0.15"
time = { version = "0.3.17", features = ["macros", "serde"]  }

[profile.release]
lto = true
opt-level = 's'
