[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["ssr"] }
# NOT WORKING EVEN WITH use_state(), NEED TO FIND A WORKAROUND.
# web-sys = { version = "0.3.60", features = ["Window", "Document", "Location"] }
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
wasm-bindgen-futures = "0.4"
comrak = "0.16.0"
time = { version = "0.3.17", features = ["macros", "serde", "formatting", "parsing"]  }
axum = { version = "0.6.4", features = ["query"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
tokio = { version = "1.24.2", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }

[profile.release]
lto = true
opt-level = 's'
