[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["ssr"] }
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
wasm-bindgen-futures = "0.4.37"
comrak = "0.18.0"
time = { version = "0.3.22", features = ["macros", "serde", "formatting", "parsing"]  }
axum = { version = "0.6.18", features = ["query"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"]}
axum-extra = { version = "0.7.4" }
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
